[tool.poetry]
name = "benchmark-histogram"
version = "0.1.0"
description = ""
authors = ["Wen Kokke <wenkokke@users.noreply.github.com>"]
license = "MIT"
packages = [{include = "benchmark_histogram"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
dataclasses-json = "^0.5.7"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
pandas = "^1.5.2"

[tool.poetry.scripts]
benchmark-histogram = 'benchmark_histogram.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
